[gd_scene load_steps=8 format=3 uid="uid://lysrnk033b8v"]

[ext_resource type="PackedScene" uid="uid://b24nf7m03xv4b" path="res://desktop/window/juice_pivot/juice_pivot.tscn" id="1_sdsnj"]
[ext_resource type="Script" uid="uid://df0n55m0hujim" path="res://apps/file_explorer_app/file_explorer_window/file_explorer_window.gd" id="1_ytlu5"]
[ext_resource type="PackedScene" uid="uid://bx3qmlit7do7s" path="res://desktop/window/window_bar/window_bar.tscn" id="2_ytlu5"]
[ext_resource type="Texture2D" uid="uid://lrl6qasaxqdw" path="res://assets/ui/windows/window_nine_patch_rect.png" id="3_goage"]
[ext_resource type="PackedScene" uid="uid://dgwj1gihalkoi" path="res://apps/file_explorer_app/file_explorer.tscn" id="4_i3qrd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_712ap"]
bg_color = Color(0, 0, 0, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxhuy"]
bg_color = Color(0.321728, 0.321728, 0.321728, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="FileExplorerWindow" type="ReferenceRect" node_paths=PackedStringArray("window_bar")]
offset_right = 820.0
offset_bottom = 472.0
script = ExtResource("1_ytlu5")
window_bar = NodePath("JuicePivot/MainPanel/VerticalSplit/WindowBar")

[node name="JuicePivot" parent="." instance=ExtResource("1_sdsnj")]
layout_mode = 1

[node name="MainPanel" type="PanelContainer" parent="JuicePivot"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -410.0
offset_top = -236.0
offset_right = 410.0
offset_bottom = 236.0
mouse_filter = 1

[node name="Control" type="Control" parent="JuicePivot/MainPanel"]
layout_mode = 2
mouse_filter = 2

[node name="ShadowPanel" type="Panel" parent="JuicePivot/MainPanel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_712ap")

[node name="OS95WindowNinePatchRect" type="NinePatchRect" parent="JuicePivot/MainPanel"]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("3_goage")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VerticalSplit" type="VBoxContainer" parent="JuicePivot/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="WindowBar" parent="JuicePivot/MainPanel/VerticalSplit" instance=ExtResource("2_ytlu5")]
unique_name_in_owner = true
layout_mode = 2

[node name="BgPanelContainer" type="PanelContainer" parent="JuicePivot/MainPanel/VerticalSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_cxhuy")

[node name="WindowContent" type="MarginContainer" parent="JuicePivot/MainPanel/VerticalSplit/BgPanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileExplorer" parent="JuicePivot/MainPanel/VerticalSplit/BgPanelContainer/WindowContent" instance=ExtResource("4_i3qrd")]
layout_mode = 2
